fullpage js implementation + section 2 overflow-y fix
Former-commit-id: 83633fa0105b569ed977b8aad0e10c673a3f5f9e

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -537,16 +537,13 @@ footer {
 }
 
 @media (min-width: 1200px) {
-    html {
-        scroll-snap-type: y mandatory;
-    }
 
     .full-page {
         height: 100vh;
         position: relative;
         /*z-index: 2;*/
         overflow-x: hidden;
-        scroll-snap-align: start;
+        overflow-y: hidden;
     }
 
     #full-page-1-text {
